# openMnemo

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
crabharness/: __init__.py  harness.py  planner.py  promotion.py  validator.py
crabharness/codex_workers/: __init__.py  base_worker.py  pdf_parser.py  web_crawler.py
docs/: LOCAL_SETUP_GUIDE.md  USER_MANUAL.md
openmnemo/: cli.py
openmnemo/grammar/: __init__.py  glossary.py  validator.py
openmnemo/mcp/: context.py  server.py  tools.py
openmnemo/ontology/: __init__.py  builder.py  identity.py  normalize.py  query.py
openmnemo/stores/: __init__.py  chroma_store.py  mongo_store.py  neo4j_store.py  sql_store.py
scripts/: test_all.py  test_harness.py  test_mcp.py  test_ontology.py  test_phase2.py  test_stores.py
