[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-mcp"
version = "0.1.0"
description = "범용 MetaOntology MCP 서버 — OpenCrab 기반"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # MCP / CLI
    "click>=8.1",
    "rich>=13.0",
    # 데이터 검증
    "pydantic>=2.0",
    # 그래프 DB
    "neo4j>=5.0",
    # 벡터 DB
    "chromadb>=0.5",
    # 문서 DB
    "pymongo>=4.6",
    # SQL (ORM-less raw)
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    # 임베딩
    "openai>=1.0",
    # 문서 파싱
    "pypdf>=4.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    # 환경변수
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
my-mcp = "openmnemo.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["openmnemo", "crabharness"]

[tool.mypy]
python_version = "3.11"
strict = false
